# dwplay

./: .gitignore  meson.build
dweets/: 10.js  2.js  3.js  4.js  8.js  9.js
dwitters/: 1.js  5.js  6.js  7.js
src/: canvas.c  canvas.h  dwplay.c  gfx.h  gfx_sdl.c  js.c  js.h
subprojects/: plutovg.wrap  quickjs.wrap
subprojects/packagefiles/quickjs/: meson.build
